Z_K8S/infra/depl/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  strategy: {}
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - image: nivedsuresh/auth-server:1.0.0
        name: auth-service
        ports:
          - containerPort: 8082
        resources: {}
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
