Z_K8S/infra/depl/config-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: config-server
  name: config-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: config-server
  strategy: {}
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - image: nivedsuresh/config-server:1.0.0
        name: configserver
        ports:
          - containerPort: 8081
        resources: {}
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
