Z_K8S/infra/depl/data-aggregator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-aggregator
  name: data-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-aggregator
  strategy: {}
  template:
    metadata:
      labels:
        app: data-aggregator
    spec:
      containers:
        - image: nivedsuresh/data-aggregator:1.0.0
          name: data-aggregator
          ports:
            - containerPort: 8084
          resources: {}
          imagePullPolicy: IfNotPresent
---


apiVersion: v1
kind: Service
metadata:
  name: data-aggregator
spec:
  selector:
    app: data-aggregator
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084


#      SPRING_APPLICATION_PORT: '8084'
      #      CONFIG_SERVER_URI: 'http://config-server:8081'
      #      SPRING_PROFILES_ACTIVE: 'dev,test,sim'
      #      REDIS_HOST: 'redis'
      #      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
      #      USER_SERVICE_CHANNEL: 'aeron:udp?endpoint=224.0.1.1:40456|reliable=true'
