Z_K8S/infra/depl/eureka-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  strategy: {}
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - image: nivedsuresh/eureka-server:1.0.0
          name: eureka-server
          ports:
            - containerPort: 8761
          resources: {}
          imagePullPolicy: IfNotPresent
---


apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
