Z_K8S/infra/depl/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
  namespace: bainsight-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - image: nivedsuresh/gateway:1.0.3
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
        name: gateway
        ports:
          - containerPort: 8080
            hostPort: 8080
        resources: {}
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: bainsight-ns
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
