Z_K8S/infra/depl/history-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: history
  name: history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history
  strategy: {}
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - image: nivedsuresh/history:1.0.1
          name: history
          ports:
            - containerPort: 8084
          resources: {}
          imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: history
spec:
  selector:
    app: history
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
