Z_K8S/infra/depl/kafka-broker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  strategy: {}
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - image: confluentinc/cp-kafka:latest
          name: broker
          ports:
            - containerPort: 9092
            - containerPort: 29092
          resources: {}
          imagePullPolicy: IfNotPresent
---


apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  selector:
    app: broker
  ports:
    - name: 'main'
      protocol: TCP
      port: 29092
      targetPort: 29092
    - name: 'secondary'
      protocol: TCP
      port: 9092
      targetPort: 9092
