Z_K8S/infra/depl/market-update-depl.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  labels:
#    app: market-update
#  name: market-update
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: market-update
#  strategy: {}
#  template:
#    metadata:
#      labels:
#        app: market-update
#    spec:
#      containers:
#        - image: nivedsuresh/market-update:1.0.0
#          name: market-update
#          ports:
#            - containerPort: 8083
#              protocol: TCP
#            - containerPort: 40123
#              protocol: UDP
#          resources: {}
#          imagePullPolicy: Always
#          env:
#            - name: SPRING_APPLICATION_PORT
#              value: "8083"
#            - name: CONFIG_SERVER_URI
#              value: 'http://config-server:8081'
#            - name: SPRING_PROFILES_ACTIVE
#              value: 'dev,test,sim'
#            - name: KAFKA_BOOTSTRAP_SERVER
#              value: 'broker:29092'
#            - name: USER_SERVICE_CHANNEL
#              valueFrom:
#                configMapKeyRef:
#                  key: aeron_user_service_channel
#                  name: common-config
#
#---
#
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: market-update
#spec:
#  selector:
#    app: market-update
#  ports:
#    - protocol: TCP
#      port: 8083
#      name: 'market-update-tcp'
#      targetPort: 8083
#    - protocol: UDP
#      port: 40123
#      name: 'market-update'
#      targetPort: 40123


apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-update
  labels:
    app: market-update
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-update
  template:
    metadata:
      labels:
        app: market-update
    spec:
      containers:
        - name: market-update
          image: nivedsuresh/market-update:1.0.2
          ports:
            - containerPort: 8083
              protocol: TCP
            - containerPort: 40456
              protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: market-update
spec:
  selector:
    app: market-update
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      name: tcp
    - protocol: UDP
      port: 40456
      targetPort: 40456
      name: udp
