Z_K8S/infra/depl/order-persistence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-persistence
  name: order-persistence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-persistence
  strategy: {}
  template:
    metadata:
      labels:
        app: order-persistence
    spec:
      containers:
      - image: nivedsuresh/order-persistence:1.0.1
        name: order-persistence
        ports:
          - containerPort: 8086
        resources: {}
        imagePullPolicy: IfNotPresent
---


apiVersion: v1
kind: Service
metadata:
  name: order-persistence
spec:
  selector:
    app: order-persistence
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
