Z_K8S/infra/depl/order-processing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-processing
  name: order-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-processing
  strategy: {}
  template:
    metadata:
      labels:
        app: order-processing
    spec:
      containers:
      - image: nivedsuresh/order-processing:1.0.0
        name: order-processing
        ports:
          - containerPort: 8087
        resources: {}
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: order-processing
spec:
  selector:
    app: order-processing
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
