Z_K8S/infra/depl/portfolio-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: nivedsuresh/portfolio:1.0.0
        name: auth-service
        ports:
          - containerPort: 8088
        resources: {}
        imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
