Z_K8S/infra/depl/risk-managemnt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: risk-management
  name: risk-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risk-management
  strategy: {}
  template:
    metadata:
      labels:
        app: risk-management
    spec:
      containers:
      - image: nivedsuresh/risk-management:1.0.0
        name: auth-service
        ports:
          - containerPort: 8089
        resources: {}
        imagePullPolicy: IfNotPresent
---


apiVersion: v1
kind: Service
metadata:
  name: order-persistence
spec:
  selector:
    app: order-persistence
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
