Z_K8S/infra/depl/watchlist-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: watchlist
  name: watchlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchlist
  strategy: {}
  template:
    metadata:
      labels:
        app: watchlist
    spec:
      containers:
        - image: nivedsuresh/watchlist:1.0.0
          name: watchlist
          ports:
            - containerPort: 8084
          resources: {}
          imagePullPolicy: IfNotPresent
---


apiVersion: v1
kind: Service
metadata:
  name: watchlist
spec:
  selector:
    app: watchlist
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
