Z_K8S/infra/depl/zookeeper-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  strategy: {}
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: confluentinc/cp-zookeeper:latest
          name: zookeeper
          ports:
            - containerPort: 2181
          resources: {}
          imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
