Z_K8S/infra/depl/ingress-depl.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress
#  namespace: bainsight-ns
#  annotations:
##    kubernetes.io/ingress.class: "public"
#    ingress.kubernetes.io/health-check-path: /actuator/health
#spec:
#  ingressClassName: 'public'
#  rules:
##    - host: lusso.college
#    - http:
#        paths:
#          - path: /
#            backend:
#              service:
#                name: gateway
#                port:
#                  number: 8080
#            pathType: Prefix
#  rules:
#  - http:
#      paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: gateway
#                port:
#                  number: 8080

#---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: bainsight-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/websocket-services: market-update
    nginx.org/websocket-services: market-update

spec:
  ingressClassName: public
  tls:
    - hosts:
        - lusso.college
      secretName: tls-secret
  rules:
    - host: lusso.college
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: market-update
                port:
                  number: 8083
          - path: /api/bainsight/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8082
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bainsight-ui
                port:
                  number: 80


---
